News UAT/force-app/main/default/objects/Opportunity/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <inlineHelpText>What is the client trying to achieve?</inlineHelpText>
    <label>Client Marketing Objectives</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>