News UAT/force-app/main/default/objects/Opportunity/fields/Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Budget__c</fullName>
    <label>Production Events Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>