News UAT/force-app/main/default/objects/Opportunity/fields/Media_Budget__c.field-meta.xml
<CustomField>
    <fullName>Media_Budget__c</fullName>
    <inlineHelpText>How much is this worth in media value to News Limited?</inlineHelpText>
    <label>Media Budget NLM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>