News UAT/force-app/main/default/objects/Opportunity/fields/Media_Budget_for_other_divisions__c.field-meta.xml
<CustomField>
    <fullName>Media_Budget_for_other_divisions__c</fullName>
    <label>Media Budget for other divisions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>