News UAT/force-app/main/default/objects/Opportunity/fields/Mindset__c.field-meta.xml
<CustomField>
    <fullName>Mindset__c</fullName>
    <inlineHelpText>What&#39;s important to them</inlineHelpText>
    <label>Mindset</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>