News UAT/force-app/main/default/objects/Opportunity/fields/MonthId__c.field-meta.xml
<CustomField>
    <fullName>MonthId__c</fullName>
    <label>Fiscal Month Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>