News UAT/force-app/main/default/objects/Opportunity/fields/NLM_Opportunity_Team_Member_2__c.field-meta.xml
<CustomField>
    <fullName>NLM_Opportunity_Team_Member_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used as approver by NLM Opportunity approval process</description>
    <label>NLM Opportunity Team Member 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesTeam2</relationshipName>
    <type>Lookup</type>
</CustomField>