News UAT/force-app/main/default/objects/Opportunity/fields/Non_standard_Client_Requests__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Client_Requests__c</fullName>
    <inlineHelpText>e.g. client requires show cards</inlineHelpText>
    <label>Non-standard Client Requests</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>