News UAT/force-app/main/default/objects/Opportunity/fields/NRM_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NRM_Account_Number__c</fullName>
    <inlineHelpText>Account Number of Customer from NRM Salesforce</inlineHelpText>
    <label>NRM Account Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>