News UAT/force-app/main/default/objects/Opportunity/fields/NRM_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>NRM_Sales_Representative__c</fullName>
    <inlineHelpText>NRM Sales representative responsible for the sale</inlineHelpText>
    <label>NRM Sales Representative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AB-KA-01 Sharon Harper_2334</fullName>
            </value>
            <value>
                <fullName>AB-KA-02 Lisa Bates_308</fullName>
            </value>
            <value>
                <fullName>BA-KA-01 Kim Thomas_2569</fullName>
            </value>
            <value>
                <fullName>BA-KA-02 Alf Boston_1040</fullName>
            </value>
            <value>
                <fullName>BA-KA-03 Leonie Van Rooyen_2576</fullName>
            </value>
            <value>
                <fullName>BL-KA-02 Narelle Schnitzerling_1201</fullName>
            </value>
            <value>
                <fullName>BR-AM-01 Peter Hockings_443</fullName>
            </value>
            <value>
                <fullName>BR-KA-01 Marie O&#39;Reilly_2370</fullName>
            </value>
            <value>
                <fullName>BR-KA-02 Michael Kidd_441</fullName>
            </value>
            <value>
                <fullName>BU-AM-01 Ingrid Barham_186</fullName>
            </value>
            <value>
                <fullName>BU-IS-01 Miranda Petersen_2558</fullName>
            </value>
            <value>
                <fullName>BU-IS-03 Kelly Gates_2801</fullName>
            </value>
            <value>
                <fullName>BU-KA-01 Morag Barrett_495</fullName>
            </value>
            <value>
                <fullName>BU-KA-02 Braden Krebs_1378</fullName>
            </value>
            <value>
                <fullName>BU-KA-04 Michelle Cooper_179</fullName>
            </value>
            <value>
                <fullName>BU-KA-05 Linda Timmons_182</fullName>
            </value>
            <value>
                <fullName>BU-KA-06 Alex Werchon_2658</fullName>
            </value>
            <value>
                <fullName>BY-KA-01 Reif Ianson_2573</fullName>
            </value>
            <value>
                <fullName>BY-KA-03 Deb Milgate_1038</fullName>
            </value>
            <value>
                <fullName>CA-KA-09 Dennis Ford_1004</fullName>
            </value>
            <value>
                <fullName>CA-KA-10 Katie Gourlay_1026</fullName>
            </value>
            <value>
                <fullName>CC-BM-01 David Dryden_2399</fullName>
            </value>
            <value>
                <fullName>CC-BM-02 Jack Horrocks_2664</fullName>
            </value>
            <value>
                <fullName>CC-BM-03 Brad Edmunds_2605</fullName>
            </value>
            <value>
                <fullName>CC-BM-04 Rach Howard_2947</fullName>
            </value>
            <value>
                <fullName>CC-BM-05 Sirisha Puri_2353</fullName>
            </value>
            <value>
                <fullName>CC-BM-06 Michael Watson_2032</fullName>
            </value>
            <value>
                <fullName>CC-BM-07 Paul Hopley_2388</fullName>
            </value>
            <value>
                <fullName>CC-BM-08 Ron Gurgacz_1958</fullName>
            </value>
            <value>
                <fullName>CC-BM-09 Priyanka Karira_2943</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>