News UAT/force-app/main/default/objects/Opportunity/fields/Opportunity_Age__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Age__c</fullName>
    <formula>IF(IsClosed,( 
CloseDate - DATEVALUE(CreatedDate)), 
NOW() - CreatedDate)</formula>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>