News UAT/force-app/main/default/objects/Opportunity/fields/Opportunity_Platform_NewsXtend__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Platform_NewsXtend__c</fullName>
    <formula>IF(INCLUDES(OpportunityGroup__c,&quot;NewsXtend&quot;),
  True,
  False
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Platform NewsXtend</label>
    <type>Checkbox</type>
</CustomField>