News UAT/force-app/main/default/objects/Opportunity/fields/Opportunity_Revenue_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue_Date_Actual__c</fullName>
    <description>Date when the first booking was created on a related opportunity product</description>
    <inlineHelpText>Date when the first booking was created on a related opportunity product</inlineHelpText>
    <label>Opportunity Revenue Date Actual</label>
    <summarizedField>OpportunityLineItem.OpportunityProduct_Revenue_Date_Actual__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Has_Sales_Order__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>