News UAT/force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Negotiation</fullName>
            </value>
            <value>
                <fullName>Brief</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Late Space</fullName>
            </value>
            <value>
                <fullName>Multi-Channel</fullName>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
            <value>
                <fullName>xxxxxxxxxxxxxTarget</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Walk-In Forecast</fullName>
            </value>
            <value>
                <fullName>NLM Proactive</fullName>
            </value>
            <value>
                <fullName>NLM Brief</fullName>
            </value>
            <value>
                <fullName>Trade Marketing</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>NLM Trade Marketing</fullName>
            </value>
            <value>
                <fullName>NLM Management</fullName>
            </value>
            <value>
                <fullName>ADM/ASM Referral</fullName>
            </value>
            <value>
                <fullName>Existing customer - new business</fullName>
            </value>
            <value>
                <fullName>Existing customer - renewal</fullName>
            </value>
            <value>
                <fullName>New customer</fullName>
            </value>
            <value>
                <fullName>Transactional YoY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>