News UAT/force-app/main/default/objects/Opportunity/fields/OpportunityGroup__c.field-meta.xml
<CustomField>
    <fullName>OpportunityGroup__c</fullName>
    <label>Opportunity Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>NewsXtend</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>