News UAT/force-app/main/default/objects/Opportunity/fields/Opty_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Opty_SFDC_ID__c</fullName>
    <displayFormat>OPTY{0000000}</displayFormat>
    <label>Opty SFDC ID</label>
    <type>AutoNumber</type>
</CustomField>