News UAT/force-app/main/default/objects/Opportunity/fields/Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount__c</fullName>
    <description>This field is introduced as part of retraction. When a SO is retracted on a Live campaign, the value is populated.</description>
    <inlineHelpText>Opportunity Amount before Retraction on Live Campaign</inlineHelpText>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>