News UAT/force-app/main/default/objects/Opportunity/fields/Owned__c.field-meta.xml
<CustomField>
    <fullName>Owned__c</fullName>
    <inlineHelpText>Media Owned</inlineHelpText>
    <label>Media - Owned</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>