News UAT/force-app/main/default/objects/Opportunity/fields/OwnerCurrentRole__c.field-meta.xml
<CustomField>
    <fullName>OwnerCurrentRole__c</fullName>
    <label>Owner Current Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>