News UAT/force-app/main/default/objects/Opportunity/fields/OwnerExternalId__c.field-meta.xml
<CustomField>
    <fullName>OwnerExternalId__c</fullName>
    <formula>Owner.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerExternalId</label>
    <type>Text</type>
</CustomField>