News UAT/force-app/main/default/objects/Opportunity/fields/OwnerModifiedRecord__c.field-meta.xml
<CustomField>
    <fullName>OwnerModifiedRecord__c</fullName>
    <description>If the last person to modify was the opportunity owner this field will be true. Used in Owner Current Role workflow.</description>
    <formula>IF(
OwnerId = LastModifiedById, TRUE, FALSE)</formula>
    <label>Owner Modified Record</label>
    <type>Checkbox</type>
</CustomField>