News UAT/force-app/main/default/objects/Opportunity/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <inlineHelpText>Media Paid, include budget split, mobile component of budget, role of each brand</inlineHelpText>
    <label>Media - Paid</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>