News UAT/force-app/main/default/objects/Opportunity/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payer Account</relationshipLabel>
    <relationshipName>Opportunities_Payer</relationshipName>
    <type>Lookup</type>
</CustomField>