News UAT/force-app/main/default/objects/Opportunity/fields/Planner_Account__c.field-meta.xml
<CustomField>
    <fullName>Planner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>