News UAT/force-app/main/default/objects/Opportunity/fields/Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Code__c</fullName>
    <description>Portfolio Code assigned from the Portfolio2__c object from the portfolio picker</description>
    <inlineHelpText>Selected from the Portfolio Picker</inlineHelpText>
    <label>Portfolio Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>