News UAT/force-app/main/default/objects/Opportunity/fields/Product_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Count__c</fullName>
    <label>Count: Product Line</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>