News UAT/force-app/main/default/objects/Opportunity/fields/Production_Creative_Mark_up__c.field-meta.xml
<CustomField>
    <fullName>Production_Creative_Mark_up__c</fullName>
    <label>Production Creative Mark-up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>