News UAT/force-app/main/default/objects/Opportunity/fields/Production_Digital_Actual__c.field-meta.xml
<CustomField>
    <fullName>Production_Digital_Actual__c</fullName>
    <label>Production Digital Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>