News UAT/force-app/main/default/objects/Opportunity/fields/Production_Marketing_Actual__c.field-meta.xml
<CustomField>
    <fullName>Production_Marketing_Actual__c</fullName>
    <label>Production Events Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>