News UAT/force-app/main/default/objects/Opportunity/fields/Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes__c</fullName>
    <description>NextGen field. Renamed from Current position to progress notes</description>
    <inlineHelpText>A brief summary of major ​changes as the opportunity moves through the sales stages. E.g. Requesting proposal, customer objections and solutions, changes to ​proposed advertising campaign e.g. ​dates and products</inlineHelpText>
    <label>Progress Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>