News UAT/force-app/main/default/objects/Opportunity/fields/Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>Push_Counter__c</fullName>
    <inlineHelpText>This field tracks how many times an Opportunity has been pushed from one close date to a later date. The more frequently it has been pushed, the lesser the probability of winning the opportunity.</inlineHelpText>
    <label>Push Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>