News UAT/force-app/main/default/objects/Opportunity/fields/Reporting_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirements__c</fullName>
    <inlineHelpText>Include non-standard reporting and tracking items required e.g. guard book</inlineHelpText>
    <label>Reporting Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>