News UAT/force-app/main/default/objects/Opportunity/fields/Respondents__c.field-meta.xml
<CustomField>
    <fullName>Respondents__c</fullName>
    <inlineHelpText>e.g Channel 10, Tapit, News Australia</inlineHelpText>
    <label>Respondents</label>
    <type>TextArea</type>
</CustomField>