News UAT/force-app/main/default/objects/Opportunity/fields/Response_Due__c.field-meta.xml
<CustomField>
    <fullName>Response_Due__c</fullName>
    <inlineHelpText>When is the response to client due</inlineHelpText>
    <label>Response Due</label>
    <type>Date</type>
</CustomField>