News UAT/force-app/main/default/objects/Opportunity/fields/Retraction_Date__c.field-meta.xml
<CustomField>
    <fullName>Retraction_Date__c</fullName>
    <description>This will be populated only when a retraction occurs on a Live Campaign.</description>
    <inlineHelpText>Most recent Live Campaign retracted Date.</inlineHelpText>
    <label>Retraction Date</label>
    <type>Date</type>
</CustomField>