News UAT/force-app/main/default/objects/Opportunity/fields/Retraction_Delta_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retraction_Delta_Amount__c</fullName>
    <formula>Amount -  Original_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retraction Delta Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>