News UAT/force-app/main/default/objects/Opportunity/fields/Revenue_Close__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Close__c</fullName>
    <label>Revenue At Close</label>
    <summarizedField>OpportunityLineItem.Revenue_AtClose__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>